v6.6
-----
+ Added support for Japanese Yen in regional price comparison feature
+ Added Yen support for wishlist totals
+ Added Yen support for pack split calculations
+ Added Yen support for custom wallet amounts
+ Added Yen support for coupon messages
+ Added Yen support for calculating your bundle savings based on games you own
+ Added Yen support for badge pages
: Fixed a bug that caused DLC checkboxes not to work correctly due to a change made by Valve
: Fixed a bug that caused highlighting to break for users with private profiles
: Fixed an issue where cached inventory data would persist past its expiration
: Fixed a bug with market totals for some users with certain currencies
: Fixed a bug where achievement sorting wouldn't work under certain circumstances


v6.5
-----
+ Added the ability to add notes to games on your wishlist
+ Added current price data when viewing a Steam gift in inventory
+ Added "Visit Trading Forum" link to badge pages when you get level to level 5 of that badge
+ Added a button to view hidden spam comments on Steam Workshop and community pages
: Fixed a bug that caused achievement sorting not to work correctly
: Fixed active market listing total to work with new data format
: Fixed a bug that would sometimes cause you not to be able to remove an item from your wishlist
: Updated highlighting code to be more robust
- Removed button to delete owned games from wishlist, as Steam now does this automatically
- Removed "Remove from wishlist" link on store pages, due to change in Valve's servers

v6.4.1
-----
: Fixed a bug where SteamCardExchange links weren't showing properly 
: Fixed a bug where sometimes a user's wishlist wouldn't load properly 
: Fixed a bug that would cause highlighting to not work correctly for some users 
: Fixed a bug that caused PCGamingWiki links not to show correctly

v6.4
-----
+ Added a progress bar to the header that indicates if Enhanced Steam is processing requests